--- a/pack/assets/minecraft/lang/en_us.json
+++ b/pack/assets/minecraft/lang/en_us.json
@@ -2,7 +2,7 @@
   "container.crafting": "",
   "menu.disconnect": "Leave the Park",
   "menu.returnToGame": "Back to the Park",
-  "gui.advancements": "ShowTimes",
+  "gui.advancements": "Shows",
   "advancements.empty": "",
   "advancements.sad_label": "",
   "item.minecraft.diamond_hoe": "MagicBand+",
