--- a/pack/assets/minecraft/lang/en_us.json
+++ b/pack/assets/minecraft/lang/en_us.json
@@ -26,4 +26,19 @@
   "block.minecraft.cherry_trapdoor": "Silver Trapdoor",
   "block.minecraft.budding_amethyst": "Tan Brick",
   "itemGroup.buildingBlocks": "§fBuilding Blocks",
+  "itemGroup.coloredBlocks": "§fColored Blocks",
+  "itemGroup.combat": "§fCombat",
+  "itemGroup.consumables": "§fConsumables",
+  "itemGroup.crafting": "§fCrafting",
+  "itemGroup.foodAndDrink": "§fFood & Drinks",
+  "itemGroup.functional": "§fFunctional Blocks",
+  "itemGroup.hotbar": "§fSaved Hotbars",
+  "itemGroup.ingredients": "§fIngredients",
+  "itemGroup.inventory": "§fSurvival Inventory",
+  "itemGroup.natural": "§fNatural Blocks",
+  "itemGroup.op": "§fOperator Utilities",
+  "itemGroup.redstone": "§fRedstone Blocks",
+  "itemGroup.search": "§fSearch Items",
+  "itemGroup.spawnEggs": "§fSpawn Eggs",
+  "itemGroup.tools": "§fTools & Utilities"
 }
